Finish recursive_shared_mutex's shared locking functions. Known bugs in exclusive locking functions. Will fix later.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "optional": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "thread": "cpp",
+        "exception": "cpp"
     }
 }
