--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ cmake_minimum_required (VERSION 3.0)
 project (dts-lib)
 
 add_subdirectory (recursive_shared_mutex)
+add_subdirectory (stl)
 add_subdirectory (thread_pool)
