--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "valarray": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "csignal": "cpp",
+        "codecvt": "cpp"
     }
 }
