Add declaration of a new class dynamic_bitset. The purpose was to make it easier to write big_int...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.0)
 
 project (dts-lib)
 
+add_subdirectory (dynamic_bitset)
 add_subdirectory (func_scheduler)
 add_subdirectory (recursive_shared_mutex)
 add_subdirectory (stl)
