--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,8 @@
         "valarray": "cpp",
         "variant": "cpp",
         "csignal": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "cassert": "cpp",
+        "climits": "cpp"
     }
 }
